syntax = "proto3";

option go_package = "./dbpb/;dbpb";

message DBAllocResponseStatus {
    int32 code = 1;
    string message = 2;
}

message DBApplicant {
	string holderId = 1;
	string requestId = 2;
}

message DBLocation {
	string region = 1;
	string zone = 2;
	string rack = 3;
	string host = 4;
}

message DBExcluded {
	repeated string hosts = 1;
}

message DBFilter {
	string arch = 1;
	string purpose  = 2;
	string diskType = 3;
}

message DBComputeRequirement {
	int32 cpuCores = 1;
	int32 memory = 2;
}

message DBDiskRequirement {
	bool needDisk = 1;
	int32 capacity = 2;  // filter disks by disk capacity
	string diskType = 3; // filter disks by disk type
	string diskSpecify = 4; // specify diskId
}

message DBPortRequirement {
	int32 start = 1;
	int32 end = 2;
	int32 portCnt = 3;
}
message DBRequirement {
	bool exclusive = 1;
	DBDiskRequirement diskReq = 2;
	DBComputeRequirement computeReq = 3;
	repeated DBPortRequirement portReq = 4;
}

message DBAllocRequirement {
	DBLocation location = 1;
	DBExcluded hostExcluded = 2;
	DBFilter hostFilter = 3;
	DBRequirement require = 4;
	int32 strategy = 5;
	int32 count  = 6;     
}

message DBAllocRequest {
	DBApplicant applicant = 1;
	repeated DBAllocRequirement requires = 2;
}

message DBDiskResource {
	string diskId = 1;
	string diskName = 2;
	string path = 3;
	string type = 4;
	int32 capacity = 5;
}

message DBPortResource {
	int32 start = 1;
	int32 end = 2;
	repeated int32 ports = 3;
}

message DBHostResource {
	int32 reqseq = 1;
	DBLocation location = 2;
	string hostId = 3;
	string hostName = 4;
	string hostIp = 5;
	string userName = 6;
	string passwd = 7;
	DBComputeRequirement computeRes = 8;
	DBDiskResource diskRes = 9;
	repeated DBPortResource portRes = 10;
}

message DBAllocResponse {
    DBAllocResponseStatus rs = 1;
    repeated DBHostResource results = 2;
}

message DBBatchAllocRequest {
	repeated DBAllocRequest batchRequests = 1;
}


message DBBatchAllocResponse {
	DBAllocResponseStatus rs = 1;
	repeated DBAllocResponse batchResults = 2;
}

message DBRecycleRequire {
	int32 recycleType = 1;
	string holderId = 2;
	string requestId = 3;
	string hostId = 4;
	string hostIp = 5;
	DBComputeRequirement computeReq = 6;
	DBDiskResource diskReq = 7;
	repeated DBPortResource portReq = 8;
}

message DBRecycleRequest {
	repeated DBRecycleRequire RecycleReqs = 1;
}

message DBRecycleResponse {
	DBAllocResponseStatus rs = 1;
}
